Add feature to upload JSON
This is for manipulating existing JSON files
in the MOOChub format.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,7 @@
     <link href="{{ url_for('static', filename='css/costumeStyles.css') }}" rel="stylesheet">
 </head>
 <body>
+    <input id="file_upload" type="file" accept="application/json">
     <div class="row" id="title_row">
         <div class="col-2">
 
